--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,10 @@
 HELP.md
 .gradle
+gradle
+gradlew
+gradlew.bat
 build/
-!gradle/wrapper/gradle-wrapper.jar
+#!gradle/wrapper/gradle-wrapper.jar
 !**/src/main/**/build/
 !**/src/test/**/build/
 
